--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -14,6 +14,9 @@
 				h1, h2 {
   text-align: center;
 }
+		footer {
+  text-align: center;
+}
 		/* in-file CSS here */
 .button {
   background-color: #347B98;
@@ -98,13 +101,12 @@
 
 </body>
 	<footer>
-  <p {
-  text-align: center;
-}>&copy; Pro Writing Whidbey<br>
+  <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
