--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -14,6 +14,9 @@
 		h1, h2, h3, p {
   text-align: center;
 }
+		footer {
+  text-align: center;
+}
 			img {
   display: block;
   margin-left: auto;
@@ -101,14 +104,13 @@ border-radius: 8px
 
 </body>
 	<footer>
-  <p {
-  text-align: center;
-}>&copy; Pro Writing Whidbey<br>
+  <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
