--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -93,6 +93,15 @@
 			</ul>
 			<a href="/majorproject/writing.html" class="button">More Writing Info</a>
 		</div>
+		<div>
+			<h2>Editing</h2>
+			<ul>
+				<li>Copyediting for basic typos, grammar, spelling, etc.</li>
+				<li>Reviewing content for clarity, accessibility, appropriateness, etc.</li>
+				<li>Editing layout, formatting, and overall design</li>
+			</ul>
+				<a href="/majorproject/editing.html" class="button">Editing</a>
+		</div>
 	</div>
 	<!-- HTML elements here -->
 
@@ -103,6 +112,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
