--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -100,7 +100,7 @@
 				<li>Reviewing content for clarity, accessibility, appropriateness, etc.</li>
 				<li>Editing layout, formatting, and overall design</li>
 			</ul>
-				<a href="/majorproject/editing.html" class="button">Editing</a>
+				<p>More details and pricing on our <a href="/majorproject/editing.html">Editing page</a>.</p>
 		</div>
 	</div>
 	<!-- HTML elements here -->
@@ -112,6 +112,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
