--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -91,7 +91,7 @@
 				<li>Presentations</li>
 				<li>And more!</li>
 			</ul>
-			<a href="/majorproject/writing.html" class="button">More Writing Info</a>
+			<p>Visit our <a href="/majorproject/writing.html">Writing page</a> for further information.</p>
 		</div>
 		<div>
 			<h2>Editing</h2>
@@ -101,6 +101,16 @@
 				<li>Editing layout, formatting, and overall design</li>
 			</ul>
 				<p>More details and pricing on our <a href="/majorproject/editing.html">Editing page</a>.</p>
+		</div>
+		<div>
+			<h2>Website Review and Design</h2>
+			<ul>
+				<li>Feedback on website usability and aesthetics</li>
+				<li>Accessibility review</li>
+				<li>Website makeovers</li>
+				<li>Website design</li>
+			</ul>
+			<p>More about <a href="/majorproject/web.html">web services</a></p>
 		</div>
 	</div>
 	<!-- HTML elements here -->
@@ -112,6 +122,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
