--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -21,6 +21,32 @@
   max-width: 100%;
 	height: auto;			
 }
+		.button {
+  background-color: #347B98;
+  border: none;			
+  color: #E4F1F6;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 10px;	
+  cursor: pointer;
+	transition-duration: 0.4s;
+}
+.button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
+
+.container {
+  display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+}
+
 
 		/* in-file CSS here */
 	</style>
@@ -81,6 +107,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
