--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -15,20 +15,6 @@
   text-align: center;
 }
 		/* in-file CSS here */
-.button {
-  background-color: #347B98;
-  border: none;			
-  color: #E4F1F6;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 18px;
-  margin: 10px;	
-  cursor: pointer;
-	transition-duration: 0.4s;
-}
-.button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
 
 .container {
   display: flex;
@@ -103,7 +89,7 @@
 				<p>More details and pricing on our <a href="/majorproject/editing.html">Editing page</a>.</p>
 		</div>
 		<div>
-			<h2>Website Review and Design</h2>
+			<h2>Web Design</h2>
 			<ul>
 				<li>Feedback on website usability and aesthetics</li>
 				<li>Accessibility review</li>
@@ -122,6 +108,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
