--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -21,6 +21,9 @@
 	flex-direction: row;
 	justify-content: center;
 }
+		.flex-item {
+  flex: 1; /* Makes all items the same width */
+}
 @media (max-width: 600px) {
   .container {
     flex-direction: column;
@@ -96,7 +99,7 @@
 				<li>Website makeovers</li>
 				<li>Website design</li>
 			</ul>
-			<p>More about <a href="/majorproject/web.html">web services</a></p>
+			<p>More about <a href="/majorproject/web.html">Web Design</a>.</p>
 		</div>
 	</div>
 	<!-- HTML elements here -->
@@ -108,6 +111,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
