--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -21,8 +21,8 @@
 	flex-direction: row;
 	justify-content: center;
 }
-		.flex-item {
-  flex: 1; /* Makes all items the same width */
+.container div {
+	width: 33%;
 }
 @media (max-width: 600px) {
   .container {
@@ -111,6 +111,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
