--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -28,6 +28,9 @@
   .container {
     flex-direction: column;
   }
+	.container div {
+	width: 100%;
+}
 }
 	</style>
 
@@ -111,6 +114,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
