--- a/codelogs/log6.html
+++ b/codelogs/log6.html
@@ -6,7 +6,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Code References</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -22,7 +22,11 @@
 
 </head>
 <body>
-
+<h3>What did you look up?</h3>
+<h3>What sites did you consult? Include links to the specific pages on those 4 resources.</h3>
+<h3>What are the differences in the information presented on each site?</h3>
+<h3>What features do you think a code reference page should offer?</h3>  
+<h3>Do any of your 4 resources stand out as particularly good or bad?</h3>
 	<!-- HTML elements here -->
 
 </body>
