--- a/codelogs/log6.html
+++ b/codelogs/log6.html
@@ -11,6 +11,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		   body {
+      background-color: ivory;
+    }
 		/* in-file CSS here */
 	</style>
 
@@ -23,10 +26,20 @@
 </head>
 <body>
 <h3>What did you look up?</h3>
+	<p>CSS Flexbox</p>
 <h3>What sites did you consult? Include links to the specific pages on those 4 resources.</h3>
+	<ul>
+		<li><a href="https://www.w3schools.com/css/css3_flexbox.asp">On W3 Schools</a></li>
+		<li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">On CSS Tricks</a></li>
+		<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Flexible_box_layout/Basic_concepts">On MDN</a></li>
+		<li><a href="https://devdocs.io/css/css_flexible_box_layout">On DevDocs</a></li>
+	</ul>
 <h3>What are the differences in the information presented on each site?</h3>
-<h3>What features do you think a code reference page should offer?</h3>  
+	<p>W3Schools (usually my go-to reference because it is good at explaining for beginners) gives visual examples of what can be done with Flexbox and has interfaces for users to play around with the code themselves. CSS also gives visual and code examples, but they are not interactive. MDN gives diagrams to help visually illustrate the Flexbox properties, and also gives more in-depth explanation. DevDocs is mostly technical and code-based, with no visual examples.</p>
+<h3>What features do you think a code reference page should offer?</h3> 
+	<p>Samples of the appropriate code, preferably including a way to see it in context, so that you can tell where it is supposed to go in the code for a webpage. Some type of visual to let people see what the code can do. Some (preferably not too little or too much) explanation of the code: how it works, what it might be used for, how it can be customized, etc.</p>
 <h3>Do any of your 4 resources stand out as particularly good or bad?</h3>
+	<p>As I said, W3Schools is very well designed for beginners. I especially like the working code samples and the ability to play with the code right there in the website and see what it does. DevDocs could perhaps be a bit more user-friendly, and both it and MDN are more technical. CSS Tricks would be more accessible if their code blocks were not reverse-printed on a black background, which is bad for people with vision issues. I have not been able to watch any of the instructional videos or do the Codecademy assignments in this class for this reason.</p>
 	<!-- HTML elements here -->
 
 </body>
