--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -68,7 +68,7 @@
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
 
-			<li><a href="/majorproject/services.html">Services</a>
+			<li><a href="#">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
 					<li><a href="/majorproject/editing.html">Editing</a></li>
@@ -76,11 +76,7 @@
 				</ul>
 			</li>
 
-			<li><a href="/majorproject/about.html">About Us</a>
-				<ul>
-					<li><a href="/majorproject/team.html">Meet the Team</a></li>
-				</ul>
-			</li>
+			<li><a href="/majorproject/about.html">About Us</a></li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
 			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 		</ul>
@@ -107,6 +103,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
