--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -22,8 +22,16 @@
 
 </head>
 <body>
-
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="ex. John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="ex. Smith"><br><br>
+ <textarea name="message" style="width:100%; max-width:600px; height:200px;">Type message here.</textarea>
+  <input type="submit" value="Submit">
+</form> 
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
