--- a/majorproject/thanks.html
+++ b/majorproject/thanks.html
@@ -22,8 +22,10 @@
 
 </head>
 <body>
-
+<h1>Thank You!</h1>
+	<h2>You should receive a response to your inquiry shortly.</h2>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
