--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -6,11 +6,16 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Contact Us</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		div {
+  width: 75%
+	  max-width: 600px
+  	text-align: center
+}
 		/* in-file CSS here */
 	</style>
 
@@ -54,5 +59,6 @@
 
 </body>
 </html>
+
 
 
