--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -12,9 +12,9 @@
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
 		div {
-  width: 75%
-	  max-width: 600px
-  	text-align: center
+  margin: auto;
+		width: 75%;
+	  max-width: 600px;
 }
 		/* in-file CSS here */
 	</style>
@@ -59,6 +59,7 @@
 
 </body>
 </html>
+
 
 
 
