--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -30,9 +30,9 @@
 	<div>
 <form action="/majorproject/thanks.html">
   <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name" value="ex. John Smith"><br><br>
+  <input type="text" id="name" name="name" placeholder="ex. John Smith"><br><br>
 	<label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" value="ex. johnsmith@website.com"><br><br>
+  <input type="email" id="email" name="email" placeholder="ex. johnsmith@website.com"><br><br>
 	 <label for="title">Preferred form of address:</label>
   <select id="title" name="title">
     <option value="ms">Ms.</option>
@@ -51,7 +51,7 @@
   <label for="service3"> Web Design</label>
    <input type="checkbox" id="service4" name="service4" value="Other">
   <label for="service4"> Other or General Inquiry</label><br><br>
- <textarea name="message" style="width:100%; height:200px;">Type message here.</textarea>
+ <textarea name="message" style="width:100%; height:200px;" placeholder="Type message here."</textarea>
   <input type="submit" value="Submit">
 </form> 
 	</div>
@@ -59,6 +59,7 @@
 
 </body>
 </html>
+
 
 
 
