--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -11,6 +11,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+				h2 {
+  text-align: center;
+}
 		div {
   margin: auto;
 		width: 75%;
@@ -24,9 +27,35 @@
 	<script>
 		// in-page JavaScript here
 	</script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grenze:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
+	<nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="/majorproject/index.html">Home</a></li>
+
+			<li><a href="#">Services</a>
+				<ul>
+					<li><a href="/majorproject/writing.html">Writing</a></li>
+					<li><a href="/majorproject/editing.html">Editing</a></li>
+					<li><a href="/majorproject/web.html">Web Design</a></li>
+				</ul>
+			</li>
+
+			<li><a href="/majorproject/about.html">About Us</a></li>
+			<li><a href="/majorproject/contact.html">Contact Us</a></li>
+			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+		</ul>
+
+	</nav>
+	
+	<h2>Contact Us</h2>
+	
 	<div>
 <form action="/majorproject/thanks.html">
   <label for="name">Name:</label><br>
@@ -58,7 +87,13 @@
 	<!-- HTML elements here -->
 
 </body>
+		<footer>
+  <p>&copy; Pro Writing Whidbey<br>
+  916 SE Bayshore Dr<br>
+  Oak Harbor, WA  98277<br>
+</footer>
 </html>
+
 
 
 
