--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -19,6 +19,41 @@
 		width: 75%;
 	  max-width: 600px;
 }
+		form {
+  border-radius: 5px;
+  background-color: #67AFCB;
+  padding: 20px;
+}
+
+label {display: block;}
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=text]:focus {
+  border: 3px solid #1A3E4C;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #347B98;
+  color: white;
+  padding: 14px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #1A3E4C;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -93,6 +128,7 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
