--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -27,7 +27,7 @@
 
 label {display: block;}
 
-input[type=text], select {
+input[type=text, email], select {
   width: 100%;
   padding: 12px;
   margin: 8px 0;
@@ -93,10 +93,10 @@ input[type=submit]:hover {
 	
 	<div>
 <form action="/majorproject/thanks.html">
-  <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name" placeholder="ex. John Smith"><br><br>
-	<label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" placeholder="ex. johnsmith@website.com"><br><br>
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" placeholder="ex. John Smith">
+	<label for="email">Email:</label>
+  <input type="email" id="email" name="email" placeholder="ex. johnsmith@website.com">
 	 <label for="title">Preferred form of address:</label>
   <select id="title" name="title">
     <option value="ms">Ms.</option>
@@ -114,7 +114,7 @@ input[type=submit]:hover {
   <input type="checkbox" id="service3" name="service3" value="Web">
   <label for="service3"> Web Design</label>
    <input type="checkbox" id="service4" name="service4" value="Other">
-  <label for="service4"> Other or General Inquiry</label><br><br>
+  <label for="service4"> Other or General Inquiry</label>
  <textarea name="message" style="width:100%; height:200px;" placeholder="Type message here."></textarea>
   <input type="submit" value="Submit">
 </form> 
@@ -128,6 +128,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
