--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -27,7 +27,16 @@
 
 label {display: block;}
 
-input[type=text, email], select {
+input[type=text], select {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+		input[type=email], select {
   width: 100%;
   padding: 12px;
   margin: 8px 0;
@@ -128,6 +137,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
