--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -58,10 +58,18 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+	font-size: 18px;
 }
 
 input[type=submit]:hover {
   background-color: #1A3E4C;
+}
+		textarea {
+  padding: 12px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
 }
 		/* in-file CSS here */
 	</style>
@@ -137,6 +145,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
