--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -30,7 +30,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
-  margin: 10px;	
+  margin: auto;	
   cursor: pointer;
 	transition-duration: 0.4s;
 }
@@ -87,7 +87,7 @@
 		</ul>
 
 	</nav>
-<h1>Welcome to Pro Writing Whidbey!</h1>
+<h1>Welcome to<br>Pro Writing Whidbey!</h1>
 	<img src="DPBridge2.jpg" alt="Deception Pass Bridge">
 
 	<h2>Whidbey Island's Premier Professional Writing Services</h2>
@@ -136,6 +136,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
