--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -16,8 +16,9 @@
 }
 		div {
   margin: auto;
-		width: 80%;
-	  max-width: 600px;
+			bottom-margin: 50px;
+		width: 68%;
+	  max-width: 850px;
 }
 		form {
   border-radius: 5px;
@@ -145,6 +146,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
