--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -72,6 +72,9 @@ input[type=submit]:hover {
   border-radius: 4px;
   font-size: 16px;
 }
+		input[type=checkbox] {
+  display: inline;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -146,6 +149,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
