--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -16,7 +16,6 @@
 }
 		div {
   margin: auto;
-			bottom-margin: 50px;
 		width: 68%;
 	  max-width: 850px;
 }
@@ -26,8 +25,6 @@
   padding: 20px;
 }
 
-label {display: block;}
-
 input[type=text], select {
   width: 100%;
   padding: 12px;
@@ -36,6 +33,7 @@ input[type=text], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+	font-size: 16px
 }
 		input[type=email], select {
   width: 100%;
@@ -45,6 +43,7 @@ input[type=text], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+	font-size: 16px
 }
 input[type=text]:focus {
   border: 3px solid #1A3E4C;
@@ -71,9 +70,6 @@ input[type=submit]:hover {
   border: 2px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
-}
-		input[type=checkbox] {
-  display: inline;
 }
 		/* in-file CSS here */
 	</style>
@@ -149,6 +145,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
