--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -66,6 +66,7 @@ input[type=submit]:hover {
 }
 		textarea {
   padding: 12px;
+	margin: 8px;
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
@@ -145,6 +146,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
