--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -72,6 +72,14 @@ input[type=submit]:hover {
   border-radius: 4px;
   font-size: 16px;
 }
+		@media (max-width: 600px) {
+div {
+	width: 100%;
+}
+			input[type=checkbox] {
+				display: block
+}
+		}
 		/* in-file CSS here */
 	</style>
 
@@ -146,6 +154,7 @@ input[type=submit]:hover {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
