--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -22,6 +22,7 @@
 		form {
   border-radius: 5px;
   background-color: #67AFCB;
+			opacity: 0.5;
   padding: 20px;
 }
 
@@ -154,6 +155,7 @@ div {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
