--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -21,8 +21,7 @@
 }
 		form {
   border-radius: 5px;
-  background-color: #67AFCB;
-			opacity: 0.75;
+  background-color: rgb(103, 175, 203, 0.5);
   padding: 20px;
 }
 
@@ -155,6 +154,7 @@ div {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
