--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -11,6 +11,16 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+				h2 {
+  text-align: center;
+}
+			img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+	height: auto;			
+}
 		.container {
   display: flex;
 	flex-direction: row;
@@ -61,7 +71,21 @@
 
 	</nav>
 	<!-- HTML elements here -->
-
+<h2>About Us</h2>
+	<p>Pro Writing Whidbey was founded in 2025 with the aim of making professional writing, editing, and web design services more accessible to small business owners, who may find dealing with large-scale contracting agencies intimidating or cost-prohibitive.</p>
+			<p>We offer a more approachable option, with personalized services designed to support small businesses, wherever they may be located. Check out our <a href="majorproject/writing.html">Writing</a>, <a href="majorproject/editing.html">Editing</a>, and <a href="majorproject/web.html">Web Design</a> pages for more information on specific services, or <a href="majorproject/contact.html">contact us</a> if you have questions! </p>
+	<h3>Meet the Team</h3>
+	<div class="container">
+		<div>
+			<h3>Evelyn Smith - Lead Writer, Editor, and Designer</h3>
+			<p>Evelyn has been writing and editing professionally since 2010. She holds a BA in English and a certificate in Professional Science and Technology Writing, both from Washington State University, where she graduated with honors.</p>
+			<p>She specializes in technical writing and editing, but also has experience in website design and marketing. In her spare time, she writes novels, which she hopes she might one day publish.</p>
+		</div>
+		<div>
+			<h3>Bilbo Smith - Office Manager</h3>
+			<p>Bilbo keeps Pro Writing Whidbey running like a well-oiled machine. Anyone who gets off task is sure to receive a prompt thump to send them back on track. No deadline will ever be missed with Bilbo on the job!</p>
+		</div>
+	</div>
 </body>
 	<footer>
   <p>&copy; Pro Writing Whidbey<br>
@@ -69,4 +93,5 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
