--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -27,7 +27,7 @@
 	justify-content: center;
 }
 .container div {
-	width: 33%;
+	width: 50%;
 }
 @media (max-width: 600px) {
   .container {
@@ -82,8 +82,7 @@
 			<p>She specializes in technical writing and editing, but also has experience in website design and marketing. In her spare time, she writes novels, which she hopes she might one day publish.</p>
 		</div>
 		<div>
-			<h3>Bilbo Smith - Office Manager</h3>
-			<p>Bilbo keeps Pro Writing Whidbey running like a well-oiled machine. Anyone who gets off task is sure to receive a prompt thump to send them back on track. No deadline will ever be missed with Bilbo on the job!</p>
+			<img src="EvelynSmith.jpg" alt="Evelyn Smith">
 		</div>
 	</div>
 </body>
@@ -93,5 +92,6 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
