--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -14,6 +14,10 @@
 				h2 {
   text-align: center;
 }
+		p, h3 {
+  margin-right: 16%;
+  margin-left: 16%;
+}
 			img {
   display: block;
   margin-left: auto;
@@ -92,6 +96,7 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
