--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -86,7 +86,7 @@
 			<p>She specializes in technical writing and editing, but also has experience in website design and marketing. In her spare time, she writes novels, which she hopes she might one day publish.</p>
 		</div>
 		<div>
-			<img src="EvelynSmith.jpg" alt="Evelyn Smith">
+			<img src="EvelynSmith.jpeg" alt="Evelyn Smith">
 		</div>
 	</div>
 </body>
@@ -96,6 +96,7 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
