--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -30,7 +30,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
-  margin: 10px;	
+  margin: auto;	
   cursor: pointer;
 	transition-duration: 0.4s;
 }
@@ -135,6 +135,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
