--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -28,7 +28,8 @@
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
+			width: 50%;
   font-size: 18px;
   margin: auto;	
   cursor: pointer;
@@ -135,6 +136,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
