--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -14,6 +14,10 @@
 		h1, h2, h3, p {
   text-align: center;
 }
+	body {
+  margin-left: 50px;
+  margin-right: 50px;
+	}
 			img {
   display: block;
   margin-left: auto;
@@ -136,6 +140,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
