--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -14,7 +14,10 @@
 				h2 {
   text-align: center;
 }
-
+	body {
+  margin-left: 50px;
+  margin-right: 50px;
+	}
 			img {
   display: block;
   margin-left: auto;
@@ -92,6 +95,7 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
