--- a/majorproject/web.html
+++ b/majorproject/web.html
@@ -33,6 +33,27 @@
 .container div {
 	width: 50%;
 }
+		table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #347B98;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+
+tr:hover {background-color: #ddd;}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(103, 175, 203, 0.5);
+  color: black;
+}
 @media (max-width: 600px) {
   .container {
     flex-direction: column;
@@ -105,4 +126,5 @@
 Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">UX Indonesia</a> on <a href="https://unsplash.com/photos/person-writing-on-white-paper-qC2n6RQU4Vw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>   
   </p></footer>
 </html>
+
 
