--- a/majorproject/web.html
+++ b/majorproject/web.html
@@ -44,6 +44,7 @@ td, th {
 }
 
 tr:nth-child(even){background-color: #f2f2f2;}
+		tr:nth-child(odd){background-color: white;}
 
 tr:hover {background-color: #ddd;}
 
@@ -105,7 +106,7 @@ th {
 			<table>
 				<tr>
 					<th>Service</th>
-					<th>Price</th>
+					<th>Estimated Price</th>
 				</tr>
 				<tr>
 					<td>Website Assessment</td>
@@ -126,5 +127,6 @@ th {
 Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">UX Indonesia</a> on <a href="https://unsplash.com/photos/person-writing-on-white-paper-qC2n6RQU4Vw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>   
   </p></footer>
 </html>
+
 
 
