--- a/majorproject/web.html
+++ b/majorproject/web.html
@@ -117,6 +117,11 @@ th {
 					<td>$50/hour</td>
 				</tr>
 			</table>
+			<p><i>Please note: All prices shown are estimates and may vary slightly depending on the exact nature of specific projects.</i></p>
+			<h3>Service Details:</h3>
+				<p><b>Website Assessment -</b> Evaluation by our staff of existing website for overall design, layout, content, visual appeal, ease of navigation, accessibility, etc.<br>
+				<b>Design or Makeover -</b> Consulting on design or redesign of website. We can also build some types of websites, if desired.	
+			</p>
 		</div>
 	</div>
 </body>
@@ -127,6 +132,7 @@ th {
 Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">UX Indonesia</a> on <a href="https://unsplash.com/photos/person-writing-on-white-paper-qC2n6RQU4Vw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>   
   </p></footer>
 </html>
+
 
 
 
