--- a/majorproject/editing.html
+++ b/majorproject/editing.html
@@ -98,7 +98,48 @@ th {
 	</nav>
 	<!-- HTML elements here -->
 <h2>Editing Services</h2>
+	<div class="container">
+		<div>
 	<img src="EditWithoutMercy.jpg" alt="Edit without mercy">
+		</div>
+		<div>
+			<table>
+				<tr>
+					<th>Service</th>
+					<th>Estimated Price</th>
+				</tr>
+					<tr>
+						<td>General Assessment</td>
+						<td>$0.02/word</td>
+					</tr>
+				<tr>
+					<td>Proofreading</td>
+					<td>$0.02/word</td>
+				</tr>
+				<tr>
+					<td>Copyediting</td>
+					<td>$0.03/word</td>
+				</tr>
+				<tr>
+					<td>Substantive Editing</td>
+					<td>$0.04/word</td>
+				</tr>
+				<tr>
+					<td>Line Editing</td>
+					<td>$0.05/word</td>
+				</tr>
+			</table>
+		</div>
+		<p><i>Please note: All prices shown are estimates and may vary slightly depending on the exact nature of specific projects.</i></p>
+		<p>Please <a href="/majorproject/contact.html">contact us</a> for information about editing of projects other than text-based documents, or if you are unsure about which type of editing would best suit your needs.</p>
+		<h3>Service Details:</h3>
+		<p><b>General Assessment -</b> Reading over a document and giving general feedback on the content, layout, etc. No specific edits provided.</p>
+		<p><b>Proofreading -</b> A final "fresh eyes" check on a document that has usually already been edited ato be sure it is ready for publication. Any necessary edits will be submitted.</p>
+		<p><b>Copyediting -</b> Most basic form of editing, generally limited to correcting typos, spelling and grammar errors, punctuation, etc.</p>
+		<p><b>Substantive Editing -</b> A medium-level edit that includes copyediting plus editing of overall design, layout, and suitability of content for the intended audience.</p>
+		<p><b>Line Editing -</b> An extremely thorough edit providing extensive revisions throughout the document.</p>
+		<p>At the moment, we are not able to offer fact-checking or research services.</p>
+	</div>
 </body>
 		<footer>
   <p>&copy; Pro Writing Whidbey<br>
@@ -107,5 +148,6 @@ th {
 	Photo by <a href="https://unsplash.com/@oddityandgrace?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">hannah grace</a> on <a href="https://unsplash.com/photos/a-white-box-with-writing-on-it-next-to-a-plant-j9JoYpaJH3A?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
   </p></footer>  
 </html>
+
 
 
