--- a/majorproject/editing.html
+++ b/majorproject/editing.html
@@ -6,7 +6,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Editing Services</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -148,6 +148,7 @@ th {
 	Photo by <a href="https://unsplash.com/@oddityandgrace?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">hannah grace</a> on <a href="https://unsplash.com/photos/a-white-box-with-writing-on-it-next-to-a-plant-j9JoYpaJH3A?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
   </p></footer>  
 </html>
+
 
 
 
