--- a/majorproject/writing.html
+++ b/majorproject/writing.html
@@ -11,6 +11,58 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+			h2 {
+  text-align: center;
+}
+	body {
+  margin-left: 35px;
+  margin-right: 35px;
+	}
+			img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+	height: auto;			
+}
+		.container {
+  display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.container div {
+	width: 50%;
+}
+		table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #347B98;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+		tr:nth-child(odd){background-color: white;}
+
+tr:hover {background-color: #ddd;}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(103, 175, 203, 0.5);
+  color: black;
+}
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+	.container div {
+	width: 100%;
+}
+}
 		/* in-file CSS here */
 	</style>
 
@@ -19,12 +71,67 @@
 	<script>
 		// in-page JavaScript here
 	</script>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<nav>
+		<a id="navBurger">&#9776;</a>
 
+		<ul>
+			<li><a href="/majorproject/index.html">Home</a></li>
+
+			<li><a href="#">Services</a>
+				<ul>
+					<li><a href="/majorproject/writing.html">Writing</a></li>
+					<li><a href="/majorproject/editing.html">Editing</a></li>
+					<li><a href="/majorproject/web.html">Web Design</a></li>
+				</ul>
+			</li>
+
+			<li><a href="/majorproject/about.html">About Us</a></li>
+			<li><a href="/majorproject/contact.html">Contact Us</a></li>
+			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+		</ul>
+
+	</nav>
 	<!-- HTML elements here -->
-
+	<h2>Writing Services</h2>
+<div class="container">
+	<div>
+		<img src="WritingPen.jpg" alt="Pen">
+	</div>
+	<div>
+		<table>
+			<tr>
+			<th>Service</th>
+				<th>Estimated Price</th>
+			</tr>
+			<tr>
+				<td>Text-based</td>
+				<td>$0.25/word</td>
+			</tr>
+			<tr>
+				<td>Non text-based</td>
+				<td>$40/hour</td>
+			</tr>
+		</table>
+		<p><i>Please note: Pricing type will depend on the exact nature of specific projects.</i></p>
+			<h3>Service Details:</h3>
+		<p>As the field of professional/technical writing covers such a broad variety of work (really just about anything that conveys information via the written word), it is difficult to list specific prices for any given project, butthe following are some more common examples:</p>
+		<p><b>Text-based -</b> Usually long-form documents consisting only or mostly of text, such as articles, essays, manuals, reports, proposals, etc.</p>
+		<p><b>Non text-based -</b> Items where text is more limited, such as PowerPoint presentations, brochures, marketing materials, infographics, posters, menus, etc.</p>
+		<h3>Writing Services We DO NOT Provide:</h3>
+		<ul>
+			<li>Academic papers or anything else that may be regarded as cheating or a breach of academic integrity (Note: Editing for academic papers may be provided in appropriate cases)</li>
+			<li>Reviews or similar endorsements for businesses, products, or services</li>
+			<li>Legal, medical, or other documents requiring specialized licensing or certification (Note: These can be included in documents we prepare, such as a legal disclaimer in an instruction manual, but they must be provided already complete)</li>
+			<li>Political campaigns</li>
+			<li>Anything that may be considered illicit, illegal, or otherwise objectionable</li>
+		</ul>
+	</div>
+</div>
 </body>
 		<footer>
   <p>&copy; Pro Writing Whidbey<br>
@@ -33,4 +140,5 @@
 	  Photo by <a href="https://unsplash.com/@hudsoncrafted?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Debby Hudson</a> on <a href="https://unsplash.com/photos/purple-flowers-on-paper-DR31squbFoA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
 </footer>
 </html>
+
 
