--- a/majorproject/writing.html
+++ b/majorproject/writing.html
@@ -119,12 +119,12 @@ th {
 		</table>
 		<p><i>Please note: Pricing type will depend on the exact nature of specific projects.</i></p>
 			<h3>Service Details:</h3>
-		<p>As the field of professional/technical writing covers such a broad variety of work (really just about anything that conveys information via the written word), it is difficult to list specific prices for any given project, butthe following are some more common examples:</p>
+		<p>As the field of professional/technical writing covers such a broad variety of work (really just about anything that conveys information via the written word), it is difficult to list specific prices for any given project, but the following are some more common examples:</p>
 		<p><b>Text-based -</b> Usually long-form documents consisting only or mostly of text, such as articles, essays, manuals, reports, proposals, etc.</p>
 		<p><b>Non text-based -</b> Items where text is more limited, such as PowerPoint presentations, brochures, marketing materials, infographics, posters, menus, etc.</p>
 		<h3>Writing Services We DO NOT Provide:</h3>
 		<ul>
-			<li>Academic papers or anything else that may be regarded as cheating or a breach of academic integrity (Note: Editing for academic papers may be provided in appropriate cases)</li>
+			<li>Academic papers or anything else that may be regarded as cheating or a breach of academic integrity (Note: <a href="/majorproject/editing.html">Editing</a> for academic papers may be provided in appropriate cases)</li>
 			<li>Reviews or similar endorsements for businesses, products, or services</li>
 			<li>Legal, medical, or other documents requiring specialized licensing or certification (Note: These can be included in documents we prepare, such as a legal disclaimer in an instruction manual, but they must be provided already complete)</li>
 			<li>Political campaigns</li>
@@ -140,5 +140,6 @@ th {
 	  Photo by <a href="https://unsplash.com/@hudsoncrafted?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Debby Hudson</a> on <a href="https://unsplash.com/photos/purple-flowers-on-paper-DR31squbFoA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
 </footer>
 </html>
+
 
 
