--- a/majorproject/portfolio.html
+++ b/majorproject/portfolio.html
@@ -6,7 +6,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Portfolio</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -22,8 +22,9 @@
 
 </head>
 <body>
-
+<a href="Sample Research Proposal.pdf">Sample Research Proposal</a>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
