--- a/majorproject/portfolio.html
+++ b/majorproject/portfolio.html
@@ -22,9 +22,10 @@
 
 </head>
 <body>
-<a href="Sample Research Proposal.pdf">Sample Research Proposal</a>
+<a href="Sample Research Proposal.pdf" target="_blank">Sample Research Proposal</a>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
