--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -6,14 +6,18 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Services</title>
+	<title>Frequently Asked Questions</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-				h1, h2 {
+				h2, h3 {
   text-align: center;
 }
+	body {
+  margin-left: 35px;
+  margin-right: 35px;
+	}
 		/* in-file CSS here */
 
 .container {
@@ -41,7 +45,7 @@
 	</script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Grenze:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -114,6 +118,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
