--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -19,14 +19,20 @@
   margin-right: 35px;
 	}
 		/* in-file CSS here */
-
+			img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+	height: auto;			
+}
 .container {
   display: flex;
 	flex-direction: row;
 	justify-content: center;
 }
 .container div {
-	width: 33%;
+	width: 50%;
 }
 @media (max-width: 600px) {
   .container {
@@ -74,39 +80,23 @@
 
 	</nav>
 
-	<h1>Our Services</h1>
+	<h2>Frequently Asked Questions</h2>
 	
 	<div class="container">
+	<div>
+		<h3>What is your process for completing projects?</h3>
+		<p>First step is to <a href="/majorproject/contact.html">Contact Us</a> with as much information as possible about your project. From there, we will work with you to hash out specific details, plus agree on a timeline and (if applicable) rate of payment. When the final draft is approved, you will receive the relevant finished product(s) and an invoice.</p>
+		<h3>Do you offer other services besides what is listed here?</h3>
+		<p>Absolutely! Our website lists only the most common examples, but we can do just about any type of project that uses the written word to convey information. We can also do some graphic design projects, such as infographics.</p>
+		<h3>What payments do you use?</h3>
+		<p>We can accept pretty much any method except cash. Method of payment is generally based on client preference.</p>
+		<h3>Where exactly is Whidbey Island? Do you only work with local clients?</h3>
+		<p>Whidbey Island is just off the coast of western Washington State, in the US, a little bit northwest of Seattle. So long as the work can be done remotely, we will happily work with clients anywhere!</p>
+		<h3>Do you offer discounts for Non-Profit Organizations?</h3>
+		<p>Yes! If your project is for a verified non-profit organization, please note that when you fill out our <a href="/majorproject/contact.html">contact form</a>.</p>
+	</div>
 		<div>
-			<h2>Writing</h2>
-			<ul>
-				<li>Technical or specialized documents, such as instruction manuals or guidebooks</li>
-				<li>Promotional or informational materials: booklets, pamphlets, posters, etc.</li>
-				<li>Email and print marketing campaigns</li>
-				<li>Restaurant menus</li>
-				<li>Presentations</li>
-				<li>And more!</li>
-			</ul>
-			<p>Visit our <a href="/majorproject/writing.html">Writing page</a> for further information.</p>
-		</div>
-		<div>
-			<h2>Editing</h2>
-			<ul>
-				<li>Copyediting for basic typos, grammar, spelling, etc.</li>
-				<li>Reviewing content for clarity, accessibility, appropriateness, etc.</li>
-				<li>Editing layout, formatting, and overall design</li>
-			</ul>
-				<p>More details and pricing on our <a href="/majorproject/editing.html">Editing page</a>.</p>
-		</div>
-		<div>
-			<h2>Web Design</h2>
-			<ul>
-				<li>Feedback on website usability and aesthetics</li>
-				<li>Accessibility review</li>
-				<li>Website makeovers</li>
-				<li>Website design</li>
-			</ul>
-			<p>More about <a href="/majorproject/web.html">Web Design</a>.</p>
+			<img src="Question.jpg" alt="question mark">
 		</div>
 	</div>
 	<!-- HTML elements here -->
@@ -116,8 +106,10 @@
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277
+Photo by <a href="https://unsplash.com/@two_tees?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Matt Walsh</a> on <a href="https://unsplash.com/photos/text-tVkdGtEe2C4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </footer>
 </html>
+
 
 
 
