--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -105,10 +105,11 @@
 	<footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
-  Oak Harbor, WA  98277
+  Oak Harbor, WA  98277<br>
 Photo by <a href="https://unsplash.com/@two_tees?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Matt Walsh</a> on <a href="https://unsplash.com/photos/text-tVkdGtEe2C4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </footer>
 </html>
+
 
 
 
