--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -84,10 +84,16 @@
 					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
-
+			<li><a href="#">About</a>
+				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
+					<li><a href="/majorproject/faq.html">FAQ</a></li>
+					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+				</ul>
+			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/resources.html">Self-Help Resources</a></li>
+			
 		</ul>
 
 	</nav>
@@ -140,6 +146,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
