--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -92,7 +92,7 @@
 				</ul>
 			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/resources.html">Self-Help Resources</a></li>
+			<li><a href="/majorproject/resources.html">Resources</a></li>
 			
 		</ul>
 
@@ -146,6 +146,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
