--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -66,10 +66,16 @@
 					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
-
+			<li><a href="#">About</a>
+				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
+					<li><a href="/majorproject/faq.html">FAQ</a></li>
+					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+				</ul>
+			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/resources.html">Resources</a></li>
+			
 		</ul>
 
 	</nav>
@@ -95,6 +101,7 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
