--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -93,7 +93,7 @@ div {
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<nav>
+		<nav>
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
@@ -106,10 +106,16 @@ div {
 					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
-
+			<li><a href="#">About</a>
+				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
+					<li><a href="/majorproject/faq.html">FAQ</a></li>
+					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+				</ul>
+			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/resources.html">Resources</a></li>
+			
 		</ul>
 
 	</nav>
@@ -153,6 +159,7 @@ div {
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
