--- a/majorproject/editing.html
+++ b/majorproject/editing.html
@@ -89,10 +89,16 @@ th {
 					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
-
+			<li><a href="#">About</a>
+				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
+					<li><a href="/majorproject/faq.html">FAQ</a></li>
+					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+				</ul>
+			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/resources.html">Resources</a></li>
+			
 		</ul>
 
 	</nav>
@@ -148,6 +154,7 @@ th {
 	Photo by <a href="https://unsplash.com/@oddityandgrace?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">hannah grace</a> on <a href="https://unsplash.com/photos/a-white-box-with-writing-on-it-next-to-a-plant-j9JoYpaJH3A?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
   </p></footer>  
 </html>
+
 
 
 
