--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -61,21 +61,23 @@
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
 
-			<li><a href="/majorproject/services.html">Services</a>
+			<li><a href="#">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
 					<li><a href="/majorproject/editing.html">Editing</a></li>
 					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
-
-			<li><a href="/majorproject/about.html">About Us</a>
+			<li><a href="#">About</a>
 				<ul>
-					<li><a href="/majorproject/team.html">Meet the Team</a></li>
+			<li><a href="/majorproject/about.html">About Us</a></li>
+					<li><a href="/majorproject/faq.html">FAQ</a></li>
+					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 				</ul>
 			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/resources.html">Resources</a></li>
+			
 		</ul>
 
 	</nav>
@@ -109,6 +111,7 @@
 Photo by <a href="https://unsplash.com/@two_tees?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Matt Walsh</a> on <a href="https://unsplash.com/photos/text-tVkdGtEe2C4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </footer>
 </html>
+
 
 
 
