--- a/majorproject/portfolio.html
+++ b/majorproject/portfolio.html
@@ -22,10 +22,37 @@
 
 </head>
 <body>
+		<nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="/majorproject/index.html">Home</a></li>
+
+			<li><a href="#">Services</a>
+				<ul>
+					<li><a href="/majorproject/writing.html">Writing</a></li>
+					<li><a href="/majorproject/editing.html">Editing</a></li>
+					<li><a href="/majorproject/web.html">Web Design</a></li>
+				</ul>
+			</li>
+			<li><a href="#">About</a>
+				<ul>
+			<li><a href="/majorproject/about.html">About Us</a></li>
+					<li><a href="/majorproject/faq.html">FAQ</a></li>
+					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
+				</ul>
+			</li>
+			<li><a href="/majorproject/contact.html">Contact Us</a></li>
+			<li><a href="/majorproject/resources.html">Resources</a></li>
+			
+		</ul>
+
+	</nav>
 <a href="Sample Research Proposal.pdf" target="_blank">Sample Research Proposal</a>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
 
